@@ -1,6 +1,6 @@
 DIST emacs-21.4-patches-6.tar.bz2 11785 RMD160 01edee136f6cd88611fa632227f685c1b93ed7a9 SHA1 042fddfc02dbd958219382fd42de0f6e20cff6c3 SHA256 495dbcb7bfb4a0dbff57e3d5873adb9eb9a4219dec3136df864ce38a6dc21937
 DIST emacs-21.4a.tar.gz 20403483 RMD160 c312e739935b56d08783bbfe97992297a363cb8a SHA1 cdb33731180fe4a912838af805dd35e3f55394d4 SHA256 1d50ddae117c48d689a3d772e390569edccfdc22168be0112d2093bd2d7c3216
 DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SHA1 dd63f9aca1a58d40d9d426dd410fb627230974f7 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b
-EBUILD emacs-21.4-r17.ebuild 5348 RMD160 58c5a25c7a49a9a935b237e20b5589bedad10168 SHA1 fefd53f63071847cc555896621d319c95d017781 SHA256 f872d9669e754017f9f6b8794e1482faeda390e2b7dac41a5b3b529f4a94aebc
-MISC ChangeLog 264 RMD160 dceff27d12891994db646882512386daa0b67907 SHA1 df89499c60abfbe1eab8e3d7ec0bdeea7c29269f SHA256 8660c85e1f8d2bdac0bba6931f12a38dbc090de52d0dc7faf7234ab96c7a8253
+EBUILD emacs-21.4-r17.ebuild 5351 RMD160 2779c83b862d7cde6e7de5357da4dd11350dd756 SHA1 fbcdb901ddfd3c45388f4aa2e8c013c5c69bf7fe SHA256 bf9fdc4b015f9c4f4db8e6d54edf70b44325a48b0e53033562bb944e9f911398
+MISC ChangeLog 404 RMD160 3e5ddd7e9be18cd34e8a5377c5be1c716522b387 SHA1 192c19dcca78caea157d6ddb5bea4f85ed41e107 SHA256 1f996d95131f83be24d249b443b963492cb5530ee730f4e187c1196288fc91ff
 MISC metadata.xml 1349 RMD160 05e3a1993e19a4a06867f8ff6d14cb96f2c19ca0 SHA1 21737a8fe30c9d3da8878a77b5558f2498eb58d9 SHA256 9ac6b7e7f4032edb1acc62c7f6c1e4a1ce3984707e25d49505e01335da5f2c62
